# CL61Depo

./: .gitignore  README.md  pyproject.toml  test.py
src/cl61.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cl61.fetch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/cl61/fetch/: cal_ref.npy  calibration.py  categorize.py  cl61.py  model.py  processing.py  raw.py  utils.py
src/cl61/func/: calibration.py  calibration_T.py  near_range.py  noise.py  rayleigh.py  study_case.py  utils.py
